--- a/sep.plist
+++ b/sep.plist
@@ -2,107 +2,184 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>5s</key>
+	<key>iPhone6,1</key>
 	<dict>
-		<key>7.</key>
+		<key>7.x</key>
 		<false/>
-		<key>8.</key>
+		<key>8.x</key>
 		<false/>
-		<key>9.</key>
+		<key>9.x</key>
 		<false/>
-		<key>10.</key>
+		<key>10.x</key>
 		<true/>
-		<key>11.</key>
+		<key>11.x</key>
 		<string>YES</string>
-		<key>12.</key>
+		<key>12.x</key>
 		<string>YES</string>
 	</dict>
-	<key>6</key>
+	<key>iPhone6,2</key>
 	<dict>
-		<key>8.</key>
+		<key>7.x</key>
 		<false/>
-		<key>9.</key>
+		<key>8.x</key>
 		<false/>
-		<key>10.</key>
+		<key>9.x</key>
 		<false/>
-		<key>11.</key>
+		<key>10.x</key>
 		<true/>
-		<key>12.</key>
+		<key>11.x</key>
+		<string>YES</string>
+		<key>12.x</key>
+		<string>YES</string>
+	</dict>
+	<key>iPhone7,1</key>
+	<dict>
+		<key>8.x</key>
+		<false/>
+		<key>9.x</key>
+		<false/>
+		<key>10.x</key>
+		<false/>
+		<key>11.x</key>
+		<true/>
+		<key>12.x</key>
 		<true/>
 	</dict>
-	<key>6s</key>
+	<key>iPhone7,2</key>
 	<dict>
-		<key>9.</key>
+		<key>8.x</key>
 		<false/>
-		<key>10.</key>
+		<key>9.x</key>
 		<false/>
-		<key>11.</key>
+		<key>10.x</key>
 		<false/>
-		<key>12.</key>
+		<key>11.x</key>
+		<true/>
+		<key>12.x</key>
+		<true/>
+	</dict>
+	<key>iPhone8,1</key>
+	<dict>
+		<key>9.x</key>
 		<false/>
-		<key>13.</key>
+		<key>10.x</key>
+		<false/>
+		<key>11.x</key>
+		<false/>
+		<key>12.x</key>
+		<false/>
+		<key>13.x</key>
+		<true/>
+	</dict>
+	<key>iPhone8,2</key>
+	<dict>
+		<key>9.x</key>
+		<false/>
+		<key>10.x</key>
+		<false/>
+		<key>11.x</key>
+		<false/>
+		<key>12.x</key>
+		<false/>
+		<key>13.x</key>
 		<true/>
 	</dict>
 	<key>iPhone9,1</key>
 	<dict>
-		<key>10.</key>
+		<key>10.x</key>
 		<false/>
-		<key>11.</key>
+		<key>11.x</key>
 		<false/>
-		<key>12.</key>
+		<key>12.x</key>
 		<false/>
-		<key>13.</key>
+		<key>13.x</key>
 		<true/>
 	</dict>
 	<key>iPhone9,2</key>
 	<dict>
-		<key>10.</key>
+		<key>10.x</key>
 		<false/>
-		<key>11.</key>
+		<key>11.x</key>
 		<false/>
-		<key>12.</key>
+		<key>12.x</key>
 		<false/>
-		<key>13.</key>
+		<key>13.x</key>
 		<true/>
 	</dict>
 	<key>iPhone9,3</key>
 	<dict>
-		<key>10.</key>
+		<key>10.x</key>
 		<false/>
-		<key>11.</key>
+		<key>11.x</key>
 		<false/>
-		<key>12.</key>
+		<key>12.x</key>
 		<false/>
-		<key>13.</key>
+		<key>13.x</key>
 		<true/>
 	</dict>
 	<key>iPhone9,4</key>
 	<dict>
-		<key>10.</key>
+		<key>10.x</key>
 		<false/>
-		<key>11.</key>
+		<key>11.x</key>
 		<false/>
-		<key>12.</key>
+		<key>12.x</key>
 		<false/>
-		<key>13.</key>
+		<key>13.x</key>
 		<true/>
 	</dict>
-	<key>8</key>
+	<key>iPhone10,1</key>
 	<dict>
-		<key>11.</key>
+		<key>11.x</key>
 		<false/>
-		<key>12.</key>
+		<key>12.x</key>
 		<false/>
-		<key>13.</key>
+		<key>13.x</key>
 		<true/>
 	</dict>
-	<key>x</key>
+	<key>iPhone10,4</key>
 	<dict>
-		<key>11.</key>
+		<key>11.x</key>
 		<false/>
-		<key>12.</key>
+		<key>12.x</key>
 		<false/>
-		<key>13.</key>
+		<key>13.x</key>
+		<true/>
+	</dict>
+	<key>iPhone10,2</key>
+	<dict>
+		<key>11.x</key>
+		<false/>
+		<key>12.x</key>
+		<false/>
+		<key>13.x</key>
+		<true/>
+	</dict>
+	<key>iPhone10,5</key>
+	<dict>
+		<key>11.x</key>
+		<false/>
+		<key>12.x</key>
+		<false/>
+		<key>13.x</key>
+		<true/>
+	</dict>
+	<key>iPhone10,3</key>
+	<dict>
+		<key>11.x</key>
+		<false/>
+		<key>12.x</key>
+		<false/>
+		<key>13.x</key>
+		<true/>
+	</dict>
+	<key>iPhone10,6</key>
+	<dict>
+		<key>11.x</key>
+		<false/>
+		<key>12.x</key>
+		<false/>
+		<key>13.x</key>
 		<true/>
 	</dict>
 </dict>
