--- a/sep.plist
+++ b/sep.plist
@@ -4,182 +4,182 @@
 <dict>
 	<key>iPhone6,1</key>
 	<dict>
-		<key>7.x</key>
+		<key>7.</key>
 		<false/>
-		<key>8.x</key>
+		<key>8.</key>
 		<false/>
-		<key>9.x</key>
+		<key>9.</key>
 		<false/>
-		<key>10.x</key>
+		<key>10.</key>
 		<true/>
-		<key>11.x</key>
+		<key>11.</key>
 		<string>YES</string>
-		<key>12.x</key>
+		<key>12.</key>
 		<string>YES</string>
 	</dict>
 	<key>iPhone6,2</key>
 	<dict>
-		<key>7.x</key>
+		<key>7.</key>
 		<false/>
-		<key>8.x</key>
+		<key>8.</key>
 		<false/>
-		<key>9.x</key>
+		<key>9.</key>
 		<false/>
-		<key>10.x</key>
+		<key>10.</key>
 		<true/>
-		<key>11.x</key>
+		<key>11.</key>
 		<string>YES</string>
-		<key>12.x</key>
+		<key>12.</key>
 		<string>YES</string>
 	</dict>
 	<key>iPhone7,1</key>
 	<dict>
-		<key>8.x</key>
+		<key>8.</key>
 		<false/>
-		<key>9.x</key>
+		<key>9.</key>
 		<false/>
-		<key>10.x</key>
+		<key>10.</key>
 		<false/>
-		<key>11.x</key>
+		<key>11.</key>
 		<true/>
-		<key>12.x</key>
+		<key>12.</key>
 		<true/>
 	</dict>
 	<key>iPhone7,2</key>
 	<dict>
-		<key>8.x</key>
+		<key>8.</key>
 		<false/>
-		<key>9.x</key>
+		<key>9.</key>
 		<false/>
-		<key>10.x</key>
+		<key>10.</key>
 		<false/>
-		<key>11.x</key>
+		<key>11.</key>
 		<true/>
-		<key>12.x</key>
+		<key>12.</key>
 		<true/>
 	</dict>
 	<key>iPhone8,1</key>
 	<dict>
-		<key>9.x</key>
+		<key>9.</key>
 		<false/>
-		<key>10.x</key>
+		<key>10.</key>
 		<false/>
-		<key>11.x</key>
+		<key>11.</key>
 		<false/>
-		<key>12.x</key>
+		<key>12.</key>
 		<false/>
-		<key>13.x</key>
+		<key>13.</key>
 		<true/>
 	</dict>
 	<key>iPhone8,2</key>
 	<dict>
-		<key>9.x</key>
+		<key>9.</key>
 		<false/>
-		<key>10.x</key>
+		<key>10.</key>
 		<false/>
-		<key>11.x</key>
+		<key>11.</key>
 		<false/>
-		<key>12.x</key>
+		<key>12.</key>
 		<false/>
-		<key>13.x</key>
+		<key>13.</key>
 		<true/>
 	</dict>
 	<key>iPhone9,1</key>
 	<dict>
-		<key>10.x</key>
+		<key>10.</key>
 		<false/>
-		<key>11.x</key>
+		<key>11.</key>
 		<false/>
-		<key>12.x</key>
+		<key>12.</key>
 		<false/>
-		<key>13.x</key>
+		<key>13.</key>
 		<true/>
 	</dict>
 	<key>iPhone9,2</key>
 	<dict>
-		<key>10.x</key>
+		<key>10.</key>
 		<false/>
-		<key>11.x</key>
+		<key>11.</key>
 		<false/>
-		<key>12.x</key>
+		<key>12.</key>
 		<false/>
-		<key>13.x</key>
+		<key>13.</key>
 		<true/>
 	</dict>
 	<key>iPhone9,3</key>
 	<dict>
-		<key>10.x</key>
+		<key>10.</key>
 		<false/>
-		<key>11.x</key>
+		<key>11.</key>
 		<false/>
-		<key>12.x</key>
+		<key>12.</key>
 		<false/>
-		<key>13.x</key>
+		<key>13.</key>
 		<true/>
 	</dict>
 	<key>iPhone9,4</key>
 	<dict>
-		<key>10.x</key>
+		<key>10.</key>
 		<false/>
-		<key>11.x</key>
+		<key>11.</key>
 		<false/>
-		<key>12.x</key>
+		<key>12.</key>
 		<false/>
-		<key>13.x</key>
+		<key>13.</key>
 		<true/>
 	</dict>
 	<key>iPhone10,1</key>
 	<dict>
-		<key>11.x</key>
+		<key>11.</key>
 		<false/>
-		<key>12.x</key>
+		<key>12.</key>
 		<false/>
-		<key>13.x</key>
+		<key>13.</key>
 		<true/>
 	</dict>
 	<key>iPhone10,4</key>
 	<dict>
-		<key>11.x</key>
+		<key>11.</key>
 		<false/>
-		<key>12.x</key>
+		<key>12.</key>
 		<false/>
-		<key>13.x</key>
+		<key>13.</key>
 		<true/>
 	</dict>
 	<key>iPhone10,2</key>
 	<dict>
-		<key>11.x</key>
+		<key>11.</key>
 		<false/>
-		<key>12.x</key>
+		<key>12.</key>
 		<false/>
-		<key>13.x</key>
+		<key>13.</key>
 		<true/>
 	</dict>
 	<key>iPhone10,5</key>
 	<dict>
-		<key>11.x</key>
+		<key>11.</key>
 		<false/>
-		<key>12.x</key>
+		<key>12.</key>
 		<false/>
-		<key>13.x</key>
+		<key>13.</key>
 		<true/>
 	</dict>
 	<key>iPhone10,3</key>
 	<dict>
-		<key>11.x</key>
+		<key>11.</key>
 		<false/>
-		<key>12.x</key>
+		<key>12.</key>
 		<false/>
-		<key>13.x</key>
+		<key>13.</key>
 		<true/>
 	</dict>
 	<key>iPhone10,6</key>
 	<dict>
-		<key>11.x</key>
+		<key>11.</key>
 		<false/>
-		<key>12.x</key>
+		<key>12.</key>
 		<false/>
-		<key>13.x</key>
+		<key>13.</key>
 		<true/>
 	</dict>
 </dict>
