--- a/sep.plist
+++ b/sep.plist
@@ -95,7 +95,7 @@
 		<key>13.</key>
 		<true/>
 	</dict>
-	<key>NO SUPPORT iPhone9,2</key>
+	<key>iPhone9,2</key>
 	<dict>
 		<key>10.</key>
 		<false/>
