--- a/sep.plist
+++ b/sep.plist
@@ -174,6 +174,32 @@
 		<key>13.</key>
 		<true/>
 	</dict>
+	<key>iPhone7,1</key>
+	<dict>
+		<key>8.x</key>
+		<false/>
+		<key>9.x</key>
+		<false/>
+		<key>10.</key>
+		<false/>
+		<key>11.</key>
+		<true/>
+		<key>12.</key>
+		<true/>
+	</dict>
+	<key>iPhone7,2</key>
+	<dict>
+		<key>8.x</key>
+		<false/>
+		<key>9.x</key>
+		<false/>
+		<key>10.</key>
+		<false/>
+		<key>11.</key>
+		<true/>
+		<key>12.</key>
+		<true/>
+	</dict>
 	<key>iPhone9,1</key>
 	<dict>
 		<key>10.</key>
