--- a/test/manifest.plist
+++ b/test/manifest.plist
@@ -11,19 +11,19 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://matthewpierson.github.io/test/Odyssey.ipa/Odyssey.ipa</string>
+					<string>https://matthewpierson.github.io/test/Odyssey.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
 					<string>display-image</string>
 					<key>url</key>
-					<string>https://matthewpierson.github.io/test/Odyssey.ipa/AppIcon60x60@2x.png</string>
+					<string>https://matthewpierson.github.io/test/AppIcon60x60@2x.png</string>
 				</dict>
 				<dict>
 					<key>kind</key>
 					<string>full-size-image</string>
 					<key>url</key>
-					<string>https://matthewpierson.github.io/test/Odyssey.ipa/AppIcon60x60@2x.png</string>
+					<string>https://matthewpierson.github.io/test/AppIcon60x60@2x.png</string>
 				</dict>
 			</array>
 			<key>metadata</key>
