--- a/test/manifest.plist
+++ b/test/manifest.plist
@@ -17,13 +17,13 @@
 					<key>kind</key>
 					<string>display-image</string>
 					<key>url</key>
-					<string>https://matthewpierson.github.io/test/AppIcon60x60@2x.png</string>
+					<string>https://matthewpierson.github.io/img/cutie.png</string>
 				</dict>
 				<dict>
 					<key>kind</key>
 					<string>full-size-image</string>
 					<key>url</key>
-					<string>https://matthewpierson.github.io/test/AppIcon60x60@2x.png</string>
+					<string>https://matthewpierson.github.io/img/cutie.png</string>
 				</dict>
 			</array>
 			<key>metadata</key>
@@ -34,8 +34,10 @@
 				<string>1.3.3 (1)</string>
 				<key>kind</key>
 				<string>software</string>
+				<key>platform-identifier</key>
+				<string>com.apple.platform.iphoneos</string>
 				<key>title</key>
-				<string></string>
+				<string>poggies</string>
 			</dict>
 		</dict>
 	</array>
