--- a/test/manifest.plist
+++ b/test/manifest.plist
@@ -37,7 +37,7 @@
 				<key>platform-identifier</key>
 				<string>com.apple.platform.iphoneos</string>
 				<key>title</key>
-				<string></string>
+				<string>Odyssey</string>
 			</dict>
 		</dict>
 	</array>
